--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -228,11 +228,8 @@ main {
       width: 100%;
       gap: 19px;
       .card--item {
-        // flex: 1;
         width: 300px;
-        // box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-          rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;      
         border-radius: 15px;
         padding: 15px;
         display: flex;
@@ -309,6 +306,7 @@ main {
     .slider2 {
       width: 100%;
       height: 400px;
+      // padding: 0 10px;
       overflow: hidden;
       
       .slides2 {
@@ -536,6 +534,9 @@ main {
           }
         }
       }
+      .subtitle--section{
+        padding-bottom:70px ;
+      }
   }
 }
 
@@ -599,6 +600,7 @@ main {
       .service--cards {
         .card--item {
           width: 100%;
+
         }
       }
 
