--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -69,6 +69,7 @@ main {
             font-size: 1rem;
             font-weight: 300;
             text-indent: 30px;
+            text-align: justify;
             strong {
               font-weight: normal;
             }
@@ -76,7 +77,7 @@ main {
         }
 
         .slider {
-          max-width: 600px;
+          max-width:100%;
           overflow: hidden;
           border-radius: 15px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -363,6 +364,15 @@ main {
             font-size: 0.8rem;
             font-style: italic;
           }
+
+          .imgGoogle{
+            position: absolute;
+            right: 5px;
+            top: 5px;
+            img{
+              width: 40px;
+            }
+          }
          
         }
 
@@ -441,6 +451,68 @@ main {
     }
     
   }
+
+
+  // contato
+  .contact{
+    padding-bottom: 200px;
+    .contact-conatiner{
+      display: flex;
+      gap: 10px;
+      // padding-top: 80px;
+
+      .col1-contact{
+        flex: 1.5;
+      }
+      .col2-contact{
+        flex: 1;
+        padding: 25px;
+        background-color: $primary-color;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        div{
+          background-color: #0a665b9e;
+          width: 100%;
+          height: 80px;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+
+          div{
+            flex: 0.5;
+            display: flex;
+            align-items: center;
+            i{
+              font-size: 2.5em;
+              color: $primary-color;
+
+            }
+          }
+
+          .contact-text{
+            flex: 2;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: start;
+           
+          }
+          .contact-text p:first-child{
+            color: $white;
+            font-weight: 600;
+            font-size: 1.4rem;
+          }
+          .contact-text p:last-child{
+            color: $white;
+            font-weight: 400;
+            font-size: 0.8rem;
+          }
+        }
+       
+      }
+    }
+  }
 }
 
 
@@ -449,6 +521,7 @@ main {
   main {
     .about {
       .colsConatinerSectionOn {
+        gap: 40px;
         .colSection-on {
           .titleLocation {
             p {
